--- a/lsd.html
+++ b/lsd.html
@@ -17,23 +17,37 @@
 <h1>LED Strip Designer</h1>
 <div id="strip">
 	<div class="slider" style="left:  0%; color: #ff0000" onmousedown="startDrag(event)">&#9673;</div>
+	<div class="slider" style="left:  0%; color: #ff0000" onmousedown="startDrag(event)">&#9673;</div>
+	<div class="slider" style="left:  0%; color: #ff0000" onmousedown="startDrag(event)">&#9673;</div>
+	<div class="slider" style="left:  0%; color: #ff0000" onmousedown="startDrag(event)">&#9673;</div>
+	<div class="slider" style="left:  0%; color: #ff0000" onmousedown="startDrag(event)">&#9673;</div>
+	<div class="slider" style="left:  0%; color: #ff0000" onmousedown="startDrag(event)">&#9673;</div>
 	<div class="slider" style="left: 25%; color: #ffff00" onmousedown="startDrag(event)">&#9673;</div>
 	<div class="slider" style="left: 50%; color: #00ff00" onmousedown="startDrag(event)">&#9673;</div>
 	<div class="slider" style="left: 75%; color: #0000ff" onmousedown="startDrag(event)">&#9673;</div>
+	<div class="slider" style="left:100%; color: #ff0000" onmousedown="startDrag(event)">&#9673;</div>
+	<div class="slider" style="left:100%; color: #ff0000" onmousedown="startDrag(event)">&#9673;</div>
+	<div class="slider" style="left:100%; color: #ff0000" onmousedown="startDrag(event)">&#9673;</div>
+	<div class="slider" style="left:100%; color: #ff0000" onmousedown="startDrag(event)">&#9673;</div>
+	<div class="slider" style="left:100%; color: #ff0000" onmousedown="startDrag(event)">&#9673;</div>
 	<div class="slider" style="left:100%; color: #ff0000" onmousedown="startDrag(event)">&#9673;</div>
 </div>
 
 <script>
 onload = ()=> {
+	for(var i of document.querySelectorAll('.slider'))
+		if(i.offsetLeft+i.offsetWidth >= i.parentElement.offsetWidth)
+			i.style.left = (i.parentElement.offsetWidth - i.offsetWidth)+'px';
+
 	for(var i of document.querySelectorAll('.slider')){
 		var p = document.createElement('div');
 		p.style.display = 'none';
 		i.appendChild(p);
-		var w = 220;
+		var w = 200;
 		p.style.marginLeft = (p.parentElement.offsetWidth-w)/2 +'px'; 
+		p.style.marginTop = '10px';
 		new iro.ColorPicker(p,{ width: w, color: p.parentElement.style.color, handleRadius: 5 })
 			.on(['color:init', 'color:change'], function(color){
-				console.log(color.hsl.l);
 				if(this.el){
 					this.el.parentElement.style.color = color.hexString;
 					if(color.hsl.l > 40)
@@ -55,6 +69,7 @@ startDrag = (event)=>{
 		drag = event.target;
 		drag.dx = event.clientX - drag.offsetLeft;
 
+		// Show this picker only
 		for(i of document.querySelectorAll('.slider'))
 			if(i!=drag)
 				i.firstElementChild.style.display = 'none';
@@ -77,10 +92,10 @@ document.body.addEventListener('mousemove', (event)=>{
 		drag.style.left = x+'px';
 		
 		var x = event.clientX - drag.dx + drag.offsetWidth/2 - drag.firstElementChild.offsetWidth/2;
-		var y = drag.offsetTop + drag.offsetHeight + 12;
 		drag.firstElementChild.style.left = x+'px';
-		drag.firstElementChild.style.top  = y+'px';
+		drag.firstElementChild.style.marginTop  = '10px';
 	}
+	console.log()
 	draw();
 })
 
